--- a/docker/java/Dockerfile
+++ b/docker/java/Dockerfile
@@ -1,26 +1,34 @@
-ARG JAVA_VERSION=8
-
-FROM fukamachi/roswell:23.10.14.114-ubuntu AS build
-
-RUN apt-get update && \
-  apt-get install -y build-essential
-
-COPY ../.. /inga
-RUN ros && \
-  ln -s /inga /root/.roswell/local-projects/inga && \
-  ros build /inga/roswell/inga.ros
+ARG INGA_IMAGE=ghcr.io/seachicken/inga
+ARG JAVA_VERSION=21
 
 
-FROM eclipse-temurin:$JAVA_VERSION-jdk-jammy
+FROM eclipse-temurin:21-jre-noble AS build
+
+WORKDIR /work
+
+RUN cp -r /opt/java/openjdk inga-jre
+
+
+FROM eclipse-temurin:$JAVA_VERSION-jdk-noble AS build-parser
+
+WORKDIR /work
+
+RUN cp -r /opt/java/openjdk inga-jdk
+
+
+FROM $INGA_IMAGE
 
 ARG JAVA_VERSION
 
 ENV JAVAPARSER=0.7.3
 ENV KTPARSRER=0.1.7
 ENV SPRING_PROPERTY_LOADER=0.3.2
-ENV JVM_DEPENDENCY_LOADER=0.9.0
+ENV JVM_DEPENDENCY_LOADER=0.9.1
+ENV JAVA_HOME=/usr/local/inga-jre
+ENV PATH=$JAVA_HOME/bin:$PATH
 
-COPY --from=build /inga/roswell/inga /usr/local/bin/
+COPY --from=build /work/inga-jre /usr/local/inga-jre
+COPY --from=build-parser /work/inga-jdk /usr/local/inga-jdk
 
 ADD https://github.com/seachicken/javaparser/releases/download/v$JAVAPARSER/javaparser-$JAVA_VERSION-$JAVAPARSER.jar ./libs/javaparser.jar
 ADD https://github.com/seachicken/ktparser/releases/download/v$KTPARSRER/ktparser-$KTPARSRER.jar ./libs/ktparser.jar
@@ -28,9 +36,9 @@ ADD https://github.com/seachicken/jvm-dependency-loader/releases/download/v$JVM_
 ADD https://github.com/seachicken/spring-property-loader/releases/download/v$SPRING_PROPERTY_LOADER/spring-property-loader-$SPRING_PROPERTY_LOADER.jar ./libs/spring-property-loader.jar
 
 RUN apt-get update && \
-  apt-get install -y maven && \
-  apt-get clean && \
-  rm -rf /var/lib/apt/lists/*
+    apt-get install -y maven && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
 
 WORKDIR /work
 
